# aws-bedrock-chatbot-solution

./: .gitignore  DEPLOYMENT.md  LICENSE  QUICK_START.md  README-S3-VECTOR-UTILS.md  README.md  VECTOR_MANAGEMENT.md  cdk.json  chatbot  config.json  deploy.sh  install.sh  integration.html  package-lock.json  process_documents  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-local.txt  requirements.txt  run_tests.py  setup_vector_env.sh  sync_lambda_files.py  validate_config.sh  vector_manager.sh
docs/: api-spec.yaml  architecture.md  architecture.txt  caching-architecture.md  cost-analysis.md  cost-monitoring.md  dependency-layer-optimization.md  dependency-removal-implementation-plan.md  deployment-guide.md  documentation-cleanup-plan.md  faq.md  lambda-layer-analysis.md  model_configuration.md  pricing.md  request-signing.md  requirements-guide.md  s3-vector-utils-versions.md  technical-architecture.md  troubleshooting.md  uninstall-guide.md  user-guide.md  vector_management.md
lambda_function/: bedrock_utils.py  cache_manager.py  cost_monitor.py  error_handler.py  lambda_handler.py  metrics_collector.py  s3_vector_utils.py  token_utils.py  validation.py
lambda_layer/: requirements.txt  requirements.txt.backup
layers/boto3-layer/python/: =1.39.17
layers/boto3-layer/python/botocore-1.39.17.dist-info/: RECORD
scripts/: aws_config.py  chatbot_cli.py  cleanup_database.py  cleanup_manager.py  cleanup_s3_buckets.sh  cleanup_vectors.py  deploy.py  deployment_manager.py  deployment_state_manager.py  deployment_validator.py  enhanced_deployment_validator.py  enhanced_progress.py  error_analyzer.py  install-deps-fedora.sh  install-deps-ubuntu.sh  manage_vector_indexes.py  process_documents_locally.py  recovery_manager.py  requirements.txt  setup_wizard.py  upload_documents.py  validate_cost_monitoring.py  validate_signing.py  validation_manager.py  vector_manager.py
scripts/common/: aws_config.sh  validation.sh
src/backend/: aws_client_factory.py  aws_utils.py  bedrock_utils.py  cache_manager.py  chunking.py  config_validator.py  constants.py  cost_monitor.py  db_utils.py  document_processor.py  document_utils.py  error_handler.py  hybrid_search.py  lambda_handler.py  logging_config.py  logging_utils.py  metrics_collector.py  model_config.py  multi_stage_retrieval.py  request_signer.py  requirements.txt  s3_vector_utils.py  token_utils.py  validation.py
src/chatbot_rag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/frontend/: index.html  widget-config.template.js  widget.js
src/infrastructure/: app.py  cdk_stack.py
tests/: test_app.py  test_bedrock_utils.py  test_cache_manager.py  test_chunking.py  test_config_validator.py  test_cost_monitor.py  test_document_processor.py  test_document_utils.py  test_lambda_handler_integration.py  test_request_signer.py  test_s3_vector_utils.py  test_token_utils.py  test_validation.py  test_websocket_comprehensive.py  test_websocket_frontend.js
